--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html> <body> it is my amplify homepage </bod> </html> 
+<html> <body> it is my amplify homepage <br> update this html file </bod> </html> 
